--- a/style.css
+++ b/style.css
@@ -61,3 +61,49 @@ body{
     text-align: right;
     border-right:0.4vh solid var(--foreground-color);
 }
+.start{
+    position:fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%) scale(1);
+    transition: 200ms ease-in-out;
+    border:1px solid yellow;
+    background-color: black;
+    border-radius:8px;
+    padding:8px;
+    z-index: 10;
+    width:20%;
+    height:10%;
+    max-width: 30%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.start.hide{
+    transform: translate(-50%,-50%) scale(0);
+}
+#overlay{
+    position: fixed;
+    opacity:1;
+    transition: 200ms ease-in-out;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background-color: rgba(0,0,0,0.5);
+    /* background-color: white; */
+    pointer-events:all;
+}
+#startBtn{
+    background-color: yellow;
+    color:red;
+    height:80%;
+    width:80%;
+    border-radius:8px;
+    border:none;
+    font-size: 1.25rem;
+}
+#overlay.hide{
+    opacity:0;
+    pointer-events:none;
+}
